--- a/client/src/styles/_base.scss
+++ b/client/src/styles/_base.scss
@@ -26,16 +26,12 @@ margin: 0;
 overflow-x: hidden;
 }
 
-body, h1, h2, h3, h4, figure {
+body, figure {
 margin: 0;
 padding: 0;
 }
 
-h1, h2, h3, h4 {
-font-family: 'Source Sans Pro', sans-serif;
-font-weight: 700;
-letter-spacing: 0.1px;
-}
+
 
 ul, ol {
 margin: 0;
