--- a/landingPage/public/css/style.css
+++ b/landingPage/public/css/style.css
@@ -2349,7 +2349,7 @@ ul {
   height: 800px;
   position: relative;
   overflow: hidden;
-  background-image: url(../img/banner_img.png);
+  background-image: url(../img/resized_banner.jpg);
   background-repeat: no-repeat;
   background-size: content;
   background-position: center;
