--- a/client/src/components/nav/Nav.module.scss
+++ b/client/src/components/nav/Nav.module.scss
@@ -12,6 +12,8 @@
 		padding: 20px;
 	}
 	&__logo {
+		font-family: 'Economica',
+			sans-serif;
 		display: flex;
     justify-content: center;
     align-items: center;
