--- a/client/src/styles/_base.scss
+++ b/client/src/styles/_base.scss
@@ -7,23 +7,24 @@
 }
 
 html {
-height: 100%;
--ms-text-size-adjust: 100%;
--webkit-text-size-adjust: 100%;
--webkit-font-smoothing: antialiased;
-font-family: 'Source Sans Pro', sans-serif;
-font-weight: 400;
-font-size: $font-size-base;
-color: get-color(text, primary);
+  height: 100%;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+  font-weight: 400;
+  font-size: $font-size-base;
+  color: get-color(text, primary);
 }
 
 body {
-background-color: transparent;
-width: 100%;
-height: 100%;
-padding: 0;
-margin: 0;
-overflow-x: hidden;
+  background-color: transparent;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  overflow-x: hidden;
+  font-family: 'Ubuntu Mono',
+  monospace;
 }
 
 body, figure {
