--- a/client/src/components/ChatBot/chatBot.module.scss
+++ b/client/src/components/ChatBot/chatBot.module.scss
@@ -1,21 +1,14 @@
-.container {
-  box-shadow: 0px 2px 10px -1px rgba(0, 0, 0, 0.2), 0px 1px 10px 0px rgba(0, 0, 0, 0.14),
-    0px 1px 13px 0px rgba(0, 0, 0, 0.12);
-  position: fixed;
-  z-index: 2;
-  top: 80%;
-  left: 90%;
-  width: 100px;
-  height: 100px;
-  & img {
-    width: 100%;
+@import '../../styles/_mixins.scss'; 
+// this is for chatbot
+// due to fixed header
+.chat-container {
+  @include mobile {
+    top: 110px !important;
   }
 }
 
-.text {
-  text-align: center;
-}
-
-.ancor {
-  color: black;
+@media screen and (max-width: 568px) {
+  .rsc-container {
+    top: 110px !important;
+  }
 }
