--- a/client/src/components/Sidebar/Sidebar.module.scss
+++ b/client/src/components/Sidebar/Sidebar.module.scss
@@ -4,3 +4,46 @@
 		display: none;
 	}
 }
+
+.item {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	transition: all ease-in-out 0.5s;
+}
+
+.item:hover {
+  background-color: #3366cc;
+}
+
+.active {
+	background-color: #3366cc;
+}
+
+.link {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: #2b3310;
+	background-color: transparent;
+	transition: color 0.2s linear;
+	
+	&_text {
+		padding: 5px 40px;
+		width: 100%;
+		line-height: 2;
+		font-size: 20px;
+		color: white;
+		text-decoration: none;
+
+		// @include mobile {
+		// 	color: black;
+		// }
+	}
+
+	// @include mobile {
+	// 	height: 50px;
+	// 	line-height: 50px;
+	// 	color: #2b3310;
+	// }
+}
