--- a/client/src/components/nav/nav-items/NavItems.module.scss
+++ b/client/src/components/nav/nav-items/NavItems.module.scss
@@ -14,11 +14,12 @@
 				color: black;
       }
       &_mobile {
-        display: flex;
+        display: none;
         justify-content: center;
         align-items: center;
         min-width: 120px;
         @include mobile {
+					display: flex;
           padding: 25px;
         }
         &:hover {
@@ -26,43 +27,6 @@
         }
       }
 		}
-
-.item {
-	display: flex;
-  justify-content: center;
-  align-items: center;
-	@include mobile {
-		width: 100%;
-		padding-left: 20px;
-	}
-}
-
-// .item:hover {
-//   border-bottom: 8px solid #2b3310;
-// }
-
-.link {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	color: #2b3310;
-	background-color: transparent;
-  transition: color 0.2s linear;
-  &_text {
-    width: 100%;
-    font-size: 20px;
-    color: white;
-    text-decoration: none;
-    @include mobile {
-			color: black;
-		}
-  }
-		@include mobile {
-			height: 50px;
-			line-height: 50px;
-			color: #2b3310;
-		}
-}
 
 	.divider {
 		padding:  0 20px;
